syntax = "proto3";

package testpb;

import "cosmos/msg/v1/msg.proto";
import "gogoproto/gogo.proto";
import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";

message streng {
  string value = 1;
}

message TestRepeatedFields {
  repeated streng nullable_omitempty = 1;

  // not supported for empty sets
  // go-amino emits nothing but the protoreflect library emits a null
  repeated streng nullable_dont_omitempty = 2 [(amino.dont_omitempty) = true];

  // not supported for empty sets
  // go-amino emits a null but the protoreflect library emits nothing
  repeated streng non_nullable_omitempty = 3 [(gogoproto.nullable) = false];

  repeated streng non_nullable_dont_omitempty = 4 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message TestNullableFields {
  streng nullable_omitempty = 1;

  // not supported
  // go-amino emits nothing and the protoreflect returns an error
  // alternatively protoreflect could emit `{}`
  streng nullable_dont_omitempty = 2 [(amino.dont_omitempty) = true];

  // not supported
  // go-amino emits `{}` but the protoreflect library emits nothing
  streng non_nullable_omitempty = 3 [(gogoproto.nullable) = false];

  streng non_nullable_dont_omitempty = 4 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message IntAsString {
  string int_as_string = 1 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (amino.dont_omitempty) = true,
    (gogoproto.nullable)   = false
  ];
}

message IntAsBytes {
  bytes int_as_bytes = 1 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (amino.dont_omitempty) = true,
    (gogoproto.nullable)   = false
  ];
}

service IntegrationTxTestMsg {
  option (cosmos.msg.v1.service) = true;

  rpc TestFields(TestRepeatedFields) returns (TestRepeatedFields) {}
}

// MsgStoreCode submit Wasm code to the system
message MsgStoreCode {
  option (amino.name) = "wasm/MsgStoreCode";
  option (cosmos.msg.v1.signer) = "sender";

  // Sender is the actor that signed the messages
  string sender = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  // WASMByteCode can be raw or gzip compressed
  bytes wasm_byte_code = 2 [ (gogoproto.customname) = "WASMByteCode" ];
  // Used in v1beta1
  reserved 3, 4;
  // InstantiatePermission access control to apply on contract creation,
  // optional
  AccessConfig instantiate_permission = 5;
}

// AccessType permission types
enum AccessType {
  option (gogoproto.goproto_enum_prefix) = false;
  option (gogoproto.goproto_enum_stringer) = false;
  // AccessTypeUnspecified placeholder for empty value
  ACCESS_TYPE_UNSPECIFIED = 0
      [ (gogoproto.enumvalue_customname) = "AccessTypeUnspecified" ];
  // AccessTypeNobody forbidden
  ACCESS_TYPE_NOBODY = 1
      [ (gogoproto.enumvalue_customname) = "AccessTypeNobody" ];

  reserved 2; // was AccessTypeOnlyAddress

  // AccessTypeEverybody unrestricted
  ACCESS_TYPE_EVERYBODY = 3
      [ (gogoproto.enumvalue_customname) = "AccessTypeEverybody" ];
  // AccessTypeAnyOfAddresses allow any of the addresses
  ACCESS_TYPE_ANY_OF_ADDRESSES = 4
      [ (gogoproto.enumvalue_customname) = "AccessTypeAnyOfAddresses" ];
}

// AccessConfig access control type.
message AccessConfig {
  option (gogoproto.goproto_stringer) = true;
  AccessType permission = 1 [ (gogoproto.moretags) = "yaml:\"permission\"" ];

  reserved 2; // was address

  repeated string addresses = 3
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}